--- a/assignment/templates/assignment/approval_process.html
+++ b/assignment/templates/assignment/approval_process.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block head %}
 <meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
-<link rel="stylesheet" href="{% static 'css/assignment/approval_process.css' %}" type="text/css" />
 <link rel="stylesheet" href="{% static 'css/assignment/approval.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/assignment/approval_process.css' %}" type="text/css" />
 
 {% endblock %}
 
@@ -191,9 +191,9 @@
                     </div>
 
         </div>
-s
+        
         <div class="createDelete flex">
-            <input type="button" class="createBtn Btn" value="등록">
+            <input type="button" class="createBtn Btn" value="확인">
             <input type="button" class="deleteBtn Btn" value="닫기" onclick="processClose()">
         </div>
 
