--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -73,6 +73,7 @@
             <tbody>
                 {% for member in member_list %}
                 {% with salary=salary_list|index:forloop.counter0 %}
+
                 <tr class="table-list_body-tr salaryList cursor">
                     <td class="checkTd table-list_body-tr_td">
                         <input tabindex="100" type="checkbox" class="amountCheck" name="member_id"
@@ -89,7 +90,8 @@
                         {% endif %}
                     </td>
                     <td class="checkTd table-list_body-tr_td">
-                        <input type="text" class="amountInput length100 salaryBase" value="{{salary.base}}">
+                        <div>1,344,000
+                        </div>
                     </td>
                     <td class="checkTd table-list_body-tr_td">
                         <input type="text" class="amountInput length100 salaryBase" value="{{salary.base}}">
@@ -131,6 +133,8 @@
                 </tr>
                 {% endwith %}
                 {% endfor %}
+
+
 
             </tbody>
         </table>
