--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
-                <a href="{% url 'vehicle:vehicleefficiency' %}" class="sideMenuNav2Link">
+                <a href="{% url 'vehicle:efficiency' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">대당효율</li>
                 </a>
                 <a href="{% url 'vehicle:list' %}" class="sideMenuNav2Link">
